# agent-sync-action

./: .gitignore  AGENTS.md  README.md  action.yml  agent_sync.py  external_skills.py  pyproject.toml  requirements.txt
.agents/rules/: github.md  poetry.md  project.md  pydantic.md  python.md  testing.md
.agents/settings/: codex.json
.agents/skills/code-review/: SKILL.md
.agents/skills/propagate-skill/: SKILL.md
.agents/skills/update-agents/: SKILL.md
.codex/: config.toml
.codex/skills/code-review/: SKILL.md
.github/workflows/: agent-sync.yml  test.yml
deploy/contextforge/: .env.example  Dockerfile  README.md
src/agent_sync/: __main__.py  cli.py  codex.py  config.py  configuration.py  constants.py  document.py  errors.py  external_skills.py  generate.py  loaders.py  main.py  mcp.py  mirror.py  plan.py  providers.py  reconciliation.py  runtime.py  source.py  sync.py  utils.py  validation.py  workspace.py
src/agent_sync/external_skills/: github.py  installer.py  sync.py
src/agent_sync/generation/: agent.py  artifact.py  command.py  context.py  generation.py  hook.py  manifest.py  marker.py  registry.py  rule.py  setting.py  skill.py
src/agent_sync/models/: document.py  front_matter.py  json_types.py  mcp.py  output.py  outputs.py  provider.py  registry.py
src/agent_sync/utils/: console.py  fs.py  markdown.py
tests/: conftest.py  factories.py  test_action.py  test_agent_sync.py  test_cli.py  test_external_skill_revisions.py  test_external_skills.py  test_generation.py  test_reconciliation.py  test_source.py  test_sync.py  test_utils.py  test_vendor.py
utils/: markdown.py  slugs.py
