[project]
name = "agent-sync-action"
version = "0.0.0"
description = "Mirror canonical agent sources and vendor registered external skills."
authors = [{ name = "julien777z" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "black>=25",
    "pyright>=1.1",
    "pytest>=8",
]

[tool.poetry]
packages = [{ include = "agent_sync", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnusedImport = "error"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
